# hive

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  TASK_2.2_SUMMARY.md  docker-compose.runtime.yml  docker-compose.yml  requirements.txt  run_all_tests.py  sample_questions.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/agents/: copilot-instructions.md
.github/scripts/: aggregate-security.sh  analyze-performance.sh  check-benchmark.sh  check-coverage.sh  compare-baseline.sh  stress-test.sh  validate-release.sh
.github/workflows/: benchmark.yml  main-build.yml  pr-validation.yml  release.yml  security-scan.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
app/: main.py  server.py
app/api/: __init__.py  app.py  models.py  versioning.py
app/cache/: manager.py
app/core/: citations.py  config.py
data/: README.md
scripts/: benchmark.sh  package.sh  setup.sh  start.sh  verify.sh
services/rag-llm-service/: .env.example  API.md  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.py  README.md  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt  sample_queries.json
services/rag-llm-service/scripts/: download-ollama-model.sh
services/rag-llm-service/src/: __init__.py  config.py  rag_service.py  server.py
services/rag-llm-service/src/core/: __init__.py  embedding_client.py  ollama_client.py  retrieval.py
services/rag-llm-service/src/prompts/: __init__.py  citation_parser.py  qa_prompt.py
services/rag-llm-service/src/schemas/: __init__.py  citation.py  query.py
services/rag-llm-service/src/utils/: __init__.py  errors.py  logger.py  validators.py
services/rag-llm-service/tests/: conftest.py
services/rag-llm-service/tests/integration/: test_query_flow.py  test_server.py
services/rag-llm-service/tests/unit/: test_citation_parser.py  test_embedding_client.py  test_logger.py  test_ollama_client.py  test_retrieval.py  test_schemas.py  test_validators.py
tests/: test_basic.py  test_llm_benchmark.py
(+113 files in other folders)
